Unstable viewport navigation using walk Mode and a Wacom Tablet #40621

Closed
opened 2014-06-14 19:31:22 +02:00 by Samir Osman · 13 comments

System Information
Operating system and graphics card
MAC OSX 10.75
AMD Radeon HD 6770M 512 MB
Wacom Intuso 4 Medium

Blender Version
Broken: 2.71 RC

Short description of error
Unstable viewport navigation using Walk Mode (Shift+F) and a Wacom Tablet

Exact steps for others to reproduce the error

  1. Look through the camera,
  2. Move stylus to the edge of the screen,
  3. Viewport spins uncontrollably.
**System Information** Operating system and graphics card MAC OSX 10.75 AMD Radeon HD 6770M 512 MB Wacom Intuso 4 Medium **Blender Version** Broken: 2.71 RC **Short description of error** Unstable viewport navigation using Walk Mode (Shift+F) and a Wacom Tablet **Exact steps for others to reproduce the error** 1. Look through the camera, 2. Move stylus to the edge of the screen, 3. Viewport spins uncontrollably.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Samir-Osman

Added subscriber: @Samir-Osman
Member

Added subscriber: @totoro-4

Added subscriber: @totoro-4
Member

The problem is the WM_cursor_warp() function in editors/space_view3d/view3d_walk.c (and also in view3d_fly.c). The Wacom tablet works in absolute coordinate mode so warping the cursor to the center results wrong relative distances for the mouse events. I think the GHOST API needs a new function to check the possibility of warping - I don't think the GHOST internal check for this (window->GetTabletData()->Active != GHOST_kTabletModeNone) is usable here.

The problem is the WM_cursor_warp() function in editors/space_view3d/view3d_walk.c (and also in view3d_fly.c). The Wacom tablet works in absolute coordinate mode so warping the cursor to the center results wrong relative distances for the mouse events. I think the GHOST API needs a new function to check the possibility of warping - I don't think the GHOST internal check for this (window->GetTabletData()->Active != GHOST_kTabletModeNone) is usable here.

Added subscriber: @00Ghz

Added subscriber: @00Ghz

Yeah finally someone reported this. It would be awesome if it was fixed.

Yeah finally someone reported this. It would be awesome if it was fixed.
Campbell Barton self-assigned this 2014-06-17 10:05:55 +02:00
Author

Many Thanks campbellbarton!

Many Thanks campbellbarton!

Added subscriber: @mont29

Added subscriber: @mont29
Member

Added subscribers: @ideasman42, @JulianEisel

Added subscribers: @ideasman42, @JulianEisel
Member

@ideasman42, what's the status on this? I think the patch is good enough for now. It's hard to find good solutions for these things anyway :/

@ideasman42, what's the status on this? I think the patch is good enough for now. It's hard to find good solutions for these things anyway :/

I really hope this goes in for 2.74. It’s impossible to use the tablet to control the camera...

I really hope this goes in for 2.74. It’s impossible to use the tablet to control the camera...

This issue was referenced by c8711b6f6f

This issue was referenced by c8711b6f6f2293f2cbf530be38b75e274c75d9ca

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40621
No description provided.