Fix T40621: Tablet in walk mode fails

Add support for walk mode /w absolute pointing devices.